test_regress/t/t_udp_sequential_bad.out
%Warning-LATCH: t/t_udp_sequential_bad.v:12:5: Latch inferred for signal 'o' (not all control paths of combinational always assign a value)
                                             : ... Suggest use of always_latch for intentional latches
   12 |     table
      |     ^~~~~
                ... For warning description see https://verilator.org/warn/LATCH?v=latest
                ... Use "/* verilator lint_off LATCH */" and lint_on around source to disable this message.
%Error: Exiting due to
